[gd_scene load_steps=6 format=2]

[ext_resource path="res://code/ui/common/buttons/check.tscn" type="PackedScene" id=1]
[ext_resource path="res://code/ui/common/buttons/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://code/ui/components/scripts/submit.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/themes/dark/timer.svg" type="Texture" id=4]
[ext_resource path="res://assets/ui/mask.png" type="Texture" id=5]

[node name="Submit" type="HBoxContainer"]
anchor_right = 1.0
custom_constants/separation = 8
script = ExtResource( 3 )

[node name="Button" parent="." instance=ExtResource( 2 )]
margin_right = 440.0
margin_bottom = 28.0
text = "Apply status on Discord"

[node name="Timer" parent="." instance=ExtResource( 2 )]
margin_left = 448.0
margin_right = 476.0
margin_bottom = 28.0
size_flags_horizontal = 1
icon = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="Timer"]
anchor_bottom = 1.0
margin_right = 28.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Tics" type="Timer" parent="Timer"]

[node name="Toggle" parent="." instance=ExtResource( 1 )]
margin_left = 484.0
margin_right = 512.0
margin_bottom = 28.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Timer" to="." method="_on_Timer_pressed"]
[connection signal="timeout" from="Timer/Tics" to="." method="_on_Tics_timeout"]
[connection signal="pressed" from="Toggle" to="." method="_on_Toggle_pressed"]
